welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:17: error: value update is not a member of java.awt.Color
    getCouleurSol()=y
    ^Array1:17: error: not found: value y
    getCouleurSol()=y
                    ^Array1:18: error: not found: value y
    T(i)=y
         ^